# python-project-generator

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  generator_gui.py  launch.py  project_generator.py  pyproject.toml  requirements.txt  run.py  scripts.py  setup.py
python_project_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: create_app_bundle.py  create_icon.py  scripts.py
src/python_project_generator/: __init__.py  __main__.py  generator_gui.py  project_generator.py
tests/: __init__.py  test_project_generator.py
