[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-generator"
dynamic = ["version"]
description = "A powerful GUI and CLI tool for generating customizable Python project templates"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Python Project Generator Team", email = "info@python-project-generator.com"}
]
maintainers = [
    {name = "Python Project Generator Team", email = "info@python-project-generator.com"}
]
keywords = ["python", "project", "generator", "template", "skeleton", "cli", "gui", "development", "tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
requires-python = ">=3.8"
dependencies = [
    "wxpython>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/python-project-generator/python-project-generator"
Documentation = "https://python-project-generator.readthedocs.io/"
Repository = "https://github.com/python-project-generator/python-project-generator.git"
"Bug Reports" = "https://github.com/python-project-generator/python-project-generator/issues"
Changelog = "https://github.com/python-project-generator/python-project-generator/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
]
gui = ["wxpython>=4.2.0"]
all = [
    "wxpython>=4.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
]

[project.scripts]
python-project-generator = "project_generator:main"
pyproj-gen = "project_generator:main"

[project.gui-scripts]
python-project-generator-gui = "generator_gui:main"
pyproj-gen-gui = "generator_gui:main"

[tool.setuptools]
py-modules = ["project_generator", "generator_gui", "run"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "project_generator.__version__"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml", "*.json"]

# Tool configurations

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["project_generator", "generator_gui"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "wx.*",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".venv",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312,lint,type

[testenv]
deps = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
commands = pytest {posargs}

[testenv:lint]
deps = 
    black>=23.0.0
    flake8>=6.0.0
commands = 
    black --check .
    flake8 .

[testenv:type]
deps = 
    mypy>=1.0.0
commands = mypy .

[testenv:format]
deps = 
    black>=23.0.0
commands = black .
""" 